Deactivate Colored Dialogue and add dialogue IDs

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -203,7 +203,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/NewSewer
+LastLevel=/Game/Levels/Forest
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -212,30 +212,31 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Dialogue/Dialogue.Dialogue
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SewerLadder/lambert1
-MRUItem1=/Game/Levels/NewSewer
-MRUItem2=/Game/Levels/Bubbleopolis
-MRUItem3=/Game/Blueprints/UI/Widgets/Settings
-MRUItem4=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem5=/Game/Blueprints/UI/Widgets/HUD6
-MRUItem6=/Game/Levels/Forest
-MRUItem7=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem8=/Game/Bubble_Tree/Bubble_Tree_LP
-MRUItem9=/Game/BookCase/Bookcase
-MRUItem10=/Game/MushroomBoys/Mush1/Mush1
-MRUItem11=/Game/MushroomBoys/Mush5/Mush5
-MRUItem12=/Game/Dialogue/DialogueWidget
-MRUItem13=/Game/Dialogue/Interact_Interface
-MRUItem14=/Game/MushroomBoys/Mush4/Mush4
-MRUItem15=/Game/MushroomBoys/Mush3/Mush3
-MRUItem16=/Game/MushroomBoys/Mush2/Mush2_
-MRUItem17=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
-MRUItem18=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
-MRUItem19=/Game/Gnome_Animated/MushGnome/Mush_Gnome
+MRUItem0=/Game/Dialogue/Dialogue
+MRUItem1=/Game/Levels/Forest
+MRUItem2=/Game/MushroomBoys/Mush5/Mush5
+MRUItem3=/Game/MushroomBoys/Mush4/Mush4
+MRUItem4=/Game/MushroomBoys/Mush3/Mush3
+MRUItem5=/Game/MushroomBoys/Mush2/Mush2_
+MRUItem6=/Game/MushroomBoys/Mush1/Mush1
+MRUItem7=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
+MRUItem8=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
+MRUItem9=/Game/Gnome_Animated/MushGnome/Mush_Gnome
+MRUItem10=/Game/Levels/Bubbleopolis
+MRUItem11=/Game/Gnome_Animated/FallGnome/Fall_Gnome
+MRUItem12=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem13=/Game/SewerLadder/lambert1
+MRUItem14=/Game/Levels/NewSewer
+MRUItem15=/Game/Blueprints/UI/Widgets/Settings
+MRUItem16=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem17=/Game/Blueprints/UI/Widgets/HUD6
+MRUItem18=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem19=/Game/Bubble_Tree/Bubble_Tree_LP
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2482,6 +2483,49 @@ gatee_C.Replication=True
 gatee_C.Collision=True
 gatee_C.Input=True
 gatee_C.Actor=True
+Fall_Gnome_C.Default=True
+Fall_Gnome_C.Tick=True
+Fall_Gnome_C.Character=True
+Fall_Gnome_C.Camera=True
+Fall_Gnome_C.Pawn=True
+Fall_Gnome_C.Replication=True
+Fall_Gnome_C.Rendering=True
+Fall_Gnome_C.Collision=True
+Fall_Gnome_C.Actor=True
+Fall_Gnome_C.Input=True
+Fall_Gnome_C.TransformCommon=True
+Fall_Gnome_C.Animation=True
+Fall_Gnome_C.Mesh=True
+Fall_Gnome_C.Physics=True
+Fall_Gnome_C.Clothing=True
+Fall_Gnome_C.MasterPoseComponent=True
+Fall_Gnome_C.Lighting=True
+Fall_Gnome_C.ClothingSimulation=True
+Fall_Gnome_C.SkinWeights=True
+Fall_Gnome_C.Navigation=True
+Fall_Gnome_C.VirtualTexture=True
+Fall_Gnome_C.Tags=True
+Fall_Gnome_C.Activation=True
+Fall_Gnome_C.Cooking=True
+Fall_Gnome_C.Character Movement (General Settings)=True
+Fall_Gnome_C.Character Movement: Walking=True
+Fall_Gnome_C.Character Movement: Jumping / Falling=True
+Fall_Gnome_C.Character Movement (Networking)=True
+Fall_Gnome_C.Character Movement: Swimming=True
+Fall_Gnome_C.Character Movement: Flying=True
+Fall_Gnome_C.Character Movement: Custom Movement=True
+Fall_Gnome_C.Character Movement (Rotation Settings)=True
+Fall_Gnome_C.Character Movement: Physics Interaction=True
+Fall_Gnome_C.Character Movement=True
+Fall_Gnome_C.Character Movement: Avoidance=True
+Fall_Gnome_C.RootMotion=True
+Fall_Gnome_C.Character Movement: NavMesh Movement=True
+Fall_Gnome_C.NavMovement=True
+Fall_Gnome_C.Velocity=True
+Fall_Gnome_C.PlanarMovement=True
+Fall_Gnome_C.MovementComponent=True
+Fall_Gnome_C.Shape=True
+Fall_Gnome_C.Materials=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -2490,9 +2534,9 @@ SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
 Character="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Character=
+Character="\"Object.Actor.PivotOffset\" "
 Pawn="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Pawn=
+Pawn="\"Object.Actor.PivotOffset\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
@@ -2550,8 +2594,8 @@ Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal
 Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
-StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
@@ -2573,7 +2617,7 @@ EdGraphNode=
 AnimGraphNode_BlendSpacePlayer="\"Object.Settings.SyncGroup\" "
 AnimGraphNode_BlendSpaceBase="\"Object.Settings.SyncGroup\" "
 Soap_Character_C="\"Object.Actor.PivotOffset\" "
-ChefGnome_C="\"Object.Radius\" "
+ChefGnome_C=
 Spring_Gnome_C="\"Object.Actor.PivotOffset\" "
 Mush_Gnome_C="\"Object.Actor.PivotOffset\" "
 Lever_C=
@@ -2585,7 +2629,7 @@ Mush1_C="\"Object.Actor.PivotOffset\" "
 Player_BP_C="\"Object.ThrowingPaint\" "
 AnimInstance="\"Object.ThrowingPaint\" "
 Winter_Gnome_C="\"Object.Actor.PivotOffset\" "
-Mush2__C="\"Object.DialogueWidget2\" "
+Mush2__C="\"Object.Actor.PivotOffset\" "
 Mush4_C="\"Object.Actor.PivotOffset\" "
 Mush5_C="\"Object.Actor.PivotOffset\" "
 Forest_C=
@@ -2594,6 +2638,7 @@ Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" "
+Fall_Gnome_C="\"Object.Actor.PivotOffset\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -4611,9 +4656,9 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/NewSewer
+MRUItem0=/Game/Levels/Forest
 MRUItem1=/Game/Levels/Bubbleopolis
-MRUItem2=/Game/Levels/Forest
+MRUItem2=/Game/Levels/NewSewer
 MRUItem3=/Game/Levels/MainMenu
 MRUItem4=/Game/Levels/Sewer
 MRUItem5=/Game/Levels/testYellow
@@ -4944,9 +4989,9 @@ TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDet
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 SceneComponent=
 Drawbridge_Blueprint_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,
-CapsuleComponent=
+CapsuleComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 SkeletalMeshComponent=
-PlayerStart=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+PlayerStart=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 InstancedFoliageActor=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 PinkPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 SkeletalMesh=
@@ -4990,7 +5035,7 @@ DialogueCreate_4=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponen
 DialogueCreate=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 Dialogue Get Line=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 Dialogue Get Line_5=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
-Mush2__C=
+Mush2__C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 DialogueGetLine_5=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 Mush3_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 Mush5_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
@@ -5014,9 +5059,11 @@ Mush2Pedestal1_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponen
 DisappearBridge3_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 Winter_Gnome_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 Mush_Gnome_C=
-Mush4_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
+Mush4_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+Fall_Gnome_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Gnome_Animated/FallGnome/Fall_Gnome.Fall_Gnome;
 RecentlyPlaced=/Game/Sewer/gatee.gatee;
 RecentlyPlaced=/Game/SewerLadder/SewerLadder.SewerLadder;
 RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
@@ -5036,7 +5083,6 @@ RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Daisy_LP3.Watering_Ca
 RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Daisy_LP2.Watering_Can_House_LP_Daisy_LP2;
 RecentlyPlaced=/Game/MushroomBoys/Mush1/Mush1.Mush1;
 RecentlyPlaced=/Game/MushroomBoys/Mush5/Mush5.Mush5;
-RecentlyPlaced=/Game/MushroomBoys/Mush4/Mush4.Mush4;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
