--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/Engine.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/Engine.ini
@@ -50,3 +50,11 @@ DisplayGamma=2.925504
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
