Music Transition in Levels

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -172,7 +172,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.000000
+ContentBrowserTab1.ThumbnailSizeScale=0.142857
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 SequenceBrowser.ActiveTypeFilters=
@@ -203,7 +203,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/NewSewer
+LastLevel=/Game/Levels/Forest
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -214,28 +214,38 @@ ToolbarOpenBPClass.CurrentViewType=0
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Blueprints/MySaveGame.MySaveGame
+OpenAssetsAtExit=/Game/Bubble_Bridge/Bubble_Stone_Bridge_LP.Bubble_Stone_Bridge_LP
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+OpenAssetsAtExit=/Game/Materials/Mat_Water_Pickup_Ist.Mat_Water_Pickup_Ist
+OpenAssetsAtExit=/Game/Blueprints/Pickups/BluePaintPickup_Actor.BluePaintPickup_Actor
+OpenAssetsAtExit=/Game/Audio/Music/Cues/BubbleGreyBM.BubbleGreyBM
+OpenAssetsAtExit=/Game/Blueprints/Pickups/SceneFinish_Actor.SceneFinish_Actor
+OpenAssetsAtExit=/Game/MusicBp.MusicBp
+OpenAssetsAtExit=/Game/Audio/Music/Wavs/Music_BGM_Actor_Blueprint.Music_BGM_Actor_Blueprint
+OpenAssetsAtExit=/Game/Audio/Music/Cues/BubbColorCue.BubbColorCue
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SewerLadder/lambert1
-MRUItem1=/Game/Levels/NewSewer
+MRUItem0=/Game/Levels/Forest
+MRUItem1=/Game/Audio/Music/Cues/BubbColorCue
 MRUItem2=/Game/Levels/Bubbleopolis
-MRUItem3=/Game/Blueprints/UI/Widgets/Settings
-MRUItem4=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem5=/Game/Blueprints/UI/Widgets/HUD6
-MRUItem6=/Game/Levels/Forest
-MRUItem7=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem8=/Game/Bubble_Tree/Bubble_Tree_LP
-MRUItem9=/Game/BookCase/Bookcase
-MRUItem10=/Game/MushroomBoys/Mush1/Mush1
-MRUItem11=/Game/MushroomBoys/Mush5/Mush5
-MRUItem12=/Game/Dialogue/DialogueWidget
-MRUItem13=/Game/Dialogue/Interact_Interface
-MRUItem14=/Game/MushroomBoys/Mush4/Mush4
-MRUItem15=/Game/MushroomBoys/Mush3/Mush3
-MRUItem16=/Game/MushroomBoys/Mush2/Mush2_
-MRUItem17=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
-MRUItem18=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
-MRUItem19=/Game/Gnome_Animated/MushGnome/Mush_Gnome
+MRUItem3=/Game/Audio/Music/Wavs/Music_BGM_Actor_Blueprint
+MRUItem4=/Game/Audio/Music/Cues/BubbleGreyBM
+MRUItem5=/Game/Music_BG_Actor_Blueprint
+MRUItem6=/Game/Blueprints/Pickups/SceneFinish_Actor
+MRUItem7=/Game/Blueprints/Pickups/BluePaintPickup_Actor
+MRUItem8=/Game/Materials/Mat_Water_Pickup_Ist
+MRUItem9=/Game/Levels/MainMenu
+MRUItem10=/Game/Blueprints/MySaveGame
+MRUItem11=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem12=/Game/Bubble_Bridge/Bubble_Stone_Bridge_LP
+MRUItem13=/Game/SewerLadder/lambert1
+MRUItem14=/Game/Levels/NewSewer
+MRUItem15=/Game/Blueprints/UI/Widgets/Settings
+MRUItem16=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem17=/Game/Blueprints/UI/Widgets/HUD6
+MRUItem18=/Game/Bubble_Tree/Bubble_Tree_LP
+MRUItem19=/Game/BookCase/Bookcase
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2482,6 +2492,35 @@ gatee_C.Replication=True
 gatee_C.Collision=True
 gatee_C.Input=True
 gatee_C.Actor=True
+MySaveGame_C.Default=True
+BluePaintPickup_Actor_C.Default=True
+Music_BG_Actor_Blueprint_C.TransformCommon=True
+Music_BG_Actor_Blueprint_C.Rendering=True
+Music_BG_Actor_Blueprint_C.Replication=True
+Music_BG_Actor_Blueprint_C.Collision=True
+Music_BG_Actor_Blueprint_C.Input=True
+Music_BG_Actor_Blueprint_C.Actor=True
+Music_BG_Actor_Blueprint_C.Tick=True
+AudioComponent.Variable=True
+AudioComponent.Sockets=True
+AudioComponent.ComponentTick=True
+AudioComponent.ComponentReplication=True
+AudioComponent.Events=True
+Music_BGM_Actor_Blueprint_C.TransformCommon=True
+Music_BGM_Actor_Blueprint_C.Rendering=True
+Music_BGM_Actor_Blueprint_C.Replication=True
+Music_BGM_Actor_Blueprint_C.Collision=True
+Music_BGM_Actor_Blueprint_C.Input=True
+Music_BGM_Actor_Blueprint_C.Actor=True
+Music_BGM_Actor_Blueprint_C.Tick=True
+Music_BG_Actor_Blueprint_C.Default=True
+MusicBp_C.TransformCommon=True
+MusicBp_C.Default=True
+MusicBp_C.Rendering=True
+MusicBp_C.Replication=True
+MusicBp_C.Collision=True
+MusicBp_C.Input=True
+MusicBp_C.Actor=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -2594,6 +2633,9 @@ Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" "
+MySaveGame_C="\"Object.SavedPlayerPosition\" "
+SaveGame="\"Object.SavedPlayerPosition\" "
+Music_BG_Actor_Blueprint_C=
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -3021,11 +3063,11 @@ bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=624.000 Y=235.000
-ScreenPosition=X=236.000 Y=55.000
+ScreenPosition=X=208.000 Y=37.000
 WindowSize=X=1305.000 Y=745.000
 WindowSize=X=1455.000 Y=819.000
 None=======
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -3042,7 +3084,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=../../../../Serotopia2021/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -4611,10 +4653,10 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/NewSewer
+MRUItem0=/Game/Levels/Forest
 MRUItem1=/Game/Levels/Bubbleopolis
-MRUItem2=/Game/Levels/Forest
-MRUItem3=/Game/Levels/MainMenu
+MRUItem2=/Game/Levels/MainMenu
+MRUItem3=/Game/Levels/NewSewer
 MRUItem4=/Game/Levels/Sewer
 MRUItem5=/Game/Levels/testYellow
 MRUItem6=/Game/Levels/NewMap
@@ -4626,7 +4668,7 @@ MRUItem11=/Game/Levels/NewWorld
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=MapCheck
+LastLogListing=PIE
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -4952,7 +4994,7 @@ PinkPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompon
 SkeletalMesh=
 BrushComponent=
 Skybox_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,
-SceneFinish_Actor_C=
+SceneFinish_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 StaticMesh=StaticMesh.ImportSettings.File Path,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Mesh,
 GreenPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
@@ -5015,8 +5057,12 @@ DisappearBridge3_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompon
 Winter_Gnome_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 Mush_Gnome_C=
 Mush4_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
+Music_BG_Actor_Blueprint_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+Music_BGM_Actor_Blueprint_C=
+MusicBp_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 
 [PlacementMode]
+RecentlyPlaced=/Game/MusicBp.MusicBp;
 RecentlyPlaced=/Game/Sewer/gatee.gatee;
 RecentlyPlaced=/Game/SewerLadder/SewerLadder.SewerLadder;
 RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
@@ -5036,7 +5082,6 @@ RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Daisy_LP3.Watering_Ca
 RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Daisy_LP2.Watering_Can_House_LP_Daisy_LP2;
 RecentlyPlaced=/Game/MushroomBoys/Mush1/Mush1.Mush1;
 RecentlyPlaced=/Game/MushroomBoys/Mush5/Mush5.Mush5;
-RecentlyPlaced=/Game/MushroomBoys/Mush4/Mush4.Mush4;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
@@ -5231,7 +5276,7 @@ ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
 PrimType=1
 
