--- a/Sero_4.26/Serotopia_Grey_1 4.26/Config/DefaultEngine.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Config/DefaultEngine.ini
@@ -5,8 +5,9 @@ DefaultMediaSoundClassName=/Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Blueprints/Gamemodes/Mechanic_Test.Mechanic_Test_C
-EditorStartupMap=/Game/Levels/MainMenu.MainMenu
-GameDefaultMap=/Game/Levels/MainMenu.MainMenu
+EditorStartupMap=/Game/Levels/PersistentLevel.PersistentLevel
+GameDefaultMap=/Game/Levels/PersistentLevel.PersistentLevel
+GameInstanceClass=/Game/Blueprints/UI/MyGameInstance.MyGameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure=False
