Added SFX (2), Adjust SFX Volume, Edit BGM (2) Name
See Link for Details: https://docs.google.com/spreadsheets/d/1jwyka8Noz8mq-4e1rBIHLa6A74KcClcvm5bOxJehfaE/edit#gid=0

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,7 +154,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Audio/Music/Cues
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -207,7 +207,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Forest
+LastLevel=/Game/Levels/PersistentLevel
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -218,42 +218,28 @@ ToolbarOpenBPClass.CurrentViewType=0
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Sewer/AllSewerWater.AllSewerWater
-OpenAssetsAtExit=/Game/Levels/Sewer_Ground_WATER__1__Blueprint.Sewer_Ground_WATER__1__Blueprint
-OpenAssetsAtExit=/Game/Blueprints/AOE/Projectile/AO1E.AO1E
-OpenAssetsAtExit=/Game/Sewer/SewerTrack.SewerTrack
-OpenAssetsAtExit=/Game/Levels/Sewer_Ground_WATER__1_.Sewer_Ground_WATER__1_
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Blueprints/NewPlayerController.NewPlayerController
-OpenAssetsAtExit=/Game/Gnome_Animated/FallGnome/Fall_Gnome.Fall_Gnome
-OpenAssetsAtExit=/Game/Blueprints/UI/Gamepad_Dialogue_IndicatorY.Gamepad_Dialogue_IndicatorY
-OpenAssetsAtExit=/Game/Blueprints/UI/Tkey.Tkey
-OpenAssetsAtExit=/Game/Blueprints/UI/Tkey_Sprite.Tkey_Sprite
-OpenAssetsAtExit=/Game/Blueprints/UI/Gamepad_Dialogue_IndicatorY_Sprite.Gamepad_Dialogue_IndicatorY_Sprite
-OpenAssetsAtExit=/Game/Gnome_Animated/SpringGnome/Spring_Gnome.Spring_Gnome
-OpenAssetsAtExit=/Game/MushroomBoys/Mush2/Mush2_.Mush2_
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/MushroomBoys/Mush2/Mush2_
-MRUItem2=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
-MRUItem3=/Game/Levels/PersistentLevel
-MRUItem4=/Game/Blueprints/UI/Gamepad_Dialogue_IndicatorY_Sprite
-MRUItem5=/Game/Blueprints/UI/Tkey_Sprite
-MRUItem6=/Game/Blueprints/UI/Tkey
-MRUItem7=/Game/Blueprints/UI/Gamepad_Dialogue_IndicatorY
-MRUItem8=/Game/Levels/MainMenu
-MRUItem9=/Game/Gnome_Animated/FallGnome/Fall_Gnome
-MRUItem10=/Game/Blueprints/NewPlayerController
-MRUItem11=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem12=/Game/Levels/Sewer_Ground_WATER__1_
-MRUItem13=/Game/Sewer/SewerTrack
-MRUItem14=/Game/Blueprints/AOE/Projectile/AO1E
-MRUItem15=/Game/Levels/Sewer_Ground_WATER__1__Blueprint
-MRUItem16=/Game/Sewer/AllSewerWater
-MRUItem17=/Game/Levels/NewSewer
-MRUItem18=/Game/Levels/Bubbleopolis
-MRUItem19=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem0=/Game/Audio/SFX/Cues/SFX_Bubbles_Loop_Cue
+MRUItem1=/Game/Audio/SFX/Cues/SFX_Footsteps_Water_1_Cue
+MRUItem2=/Game/Audio/SFX/Cues/SFX_Footsteps_Grass_1_Cue
+MRUItem3=/Game/Audio/SFX/Cues/SFX_Footsteps_Stone_1_Cue
+MRUItem4=/Game/Audio/SFX/Cues/SFX_Footstep_Sand_1_Cue
+MRUItem5=/Game/Audio/SFX/Cues/SFX_Book_Cover_Close_Cue
+MRUItem6=/Game/Audio/SFX/Cues/SFX_Bubbles_Cue
+MRUItem7=/Game/MushroomBoys/Mush2/Mush2_
+MRUItem8=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
+MRUItem9=/Game/Blueprints/UI/Gamepad_Dialogue_IndicatorY_Sprite
+MRUItem10=/Game/Blueprints/UI/Tkey_Sprite
+MRUItem11=/Game/Blueprints/UI/Tkey
+MRUItem12=/Game/Blueprints/UI/Gamepad_Dialogue_IndicatorY
+MRUItem13=/Game/Gnome_Animated/FallGnome/Fall_Gnome
+MRUItem14=/Game/Blueprints/NewPlayerController
+MRUItem15=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem16=/Game/Levels/Sewer_Ground_WATER__1_
+MRUItem17=/Game/Sewer/SewerTrack
+MRUItem18=/Game/Blueprints/AOE/Projectile/AO1E
+MRUItem19=/Game/Levels/Sewer_Ground_WATER__1__Blueprint
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2674,6 +2660,7 @@ PaperSprite.Sprite=True
 PaperSprite.Sockets=True
 PaperSprite.Collision=True
 PaperSprite.Rendering=True
+NewPlayerController_C.Default=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -2732,7 +2719,7 @@ SceneComponent=
 ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
-StaticMeshActor="\"Object.Default.TrackRef\" "
+StaticMeshActor=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 PlayerCharacter_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
@@ -2777,7 +2764,7 @@ Mush1_C="\"Object.Actor.PivotOffset\" "
 Player_BP_C="\"Object.ThrowingPaint\" "
 AnimInstance="\"Object.ThrowingPaint\" "
 Winter_Gnome_C="\"Object.Actor.PivotOffset\" "
-Mush2__C="\"Object.DialogueWidget\" "
+Mush2__C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
 Mush4_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
 Mush5_C="\"Object.Actor.PivotOffset\" "
 Forest_C=
@@ -2805,6 +2792,8 @@ NewPlayerController_C=
 PlayerController=
 Controller=
 PaperSprite="\"Object.Sprite.SourceUV\" "
+SoundCue="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
+SoundBase="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -3175,6 +3164,19 @@ None=======
 /Game/Bubble_Bridge/Bubble_Stone_Bridge_LP.Bubble_Stone_Bridge_LP=1
 /Game/Levels/Bubbleopolis.Bubbleopolis:PersistentLevel.Bubbleopolis=1
 /Game/Sewer/AllSewerWater.Default__AllSewerWater_C:StaticMeshComponent0=1
+/Game/Blueprints/UI/Gamepad_Dialogue_IndicatorY_Sprite.Gamepad_Dialogue_IndicatorY_Sprite=1
+/Game/Blueprints/UI/Tkey_Sprite.Tkey_Sprite=1
+/Game/Blueprints/UI/Tkey.Tkey=1
+/Game/Blueprints/UI/Gamepad_Dialogue_IndicatorY.Gamepad_Dialogue_IndicatorY=1
+/Game/Blueprints/NewPlayerController.NewPlayerController=1
+/Game/Levels/Sewer_Ground_WATER__1_.Sewer_Ground_WATER__1_=1
+/Game/Sewer/SewerTrack.SewerTrack=1
+/Game/Levels/Sewer_Ground_WATER__1__Blueprint.Sewer_Ground_WATER__1__Blueprint=1
+/Game/Sewer/AllSewerWater.AllSewerWater=1
+/Game/Audio/SFX/Cues/SFX_Bubbles_Cue.SFX_Bubbles_Cue=1
+/Game/Audio/SFX/Cues/SFX_Book_Cover_Close_Cue.SFX_Book_Cover_Close_Cue=1
+/Game/Audio/SFX/Cues/SFX_Footsteps_Water_1_Cue.SFX_Footsteps_Water_1_Cue=1
+/Game/Audio/SFX/Cues/SFX_Bubbles_Loop_Cue.SFX_Bubbles_Loop_Cue=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -3238,11 +3240,11 @@ bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=624.000 Y=235.000
-ScreenPosition=X=236.000 Y=55.000
+ScreenPosition=X=82.000 Y=150.000
 WindowSize=X=1305.000 Y=745.000
 WindowSize=X=1470.000 Y=834.000
 None=======
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -3259,7 +3261,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../Serotopia2021/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=D:/Unreal Projects/Serotopia/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -4828,8 +4830,8 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/PersistentLevel
+MRUItem0=/Game/Levels/PersistentLevel
+MRUItem1=/Game/Levels/Forest
 MRUItem2=/Game/Levels/MainMenu
 MRUItem3=/Game/Levels/NewSewer
 MRUItem4=/Game/Levels/Bubbleopolis
